[gd_scene load_steps=3 format=3 uid="uid://b2547wy2c72ew"]

[ext_resource type="Script" uid="uid://dtmdok4pcaxle" path="res://scripts/pause_menu.gd" id="1_myx47"]
[ext_resource type="FontFile" uid="uid://bj6xh5t7fh6a0" path="res://assets/fonts/PixelOperator8.ttf" id="2_kukqi"]

[node name="pause_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_myx47")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = 64.0
offset_right = 228.0
offset_bottom = 288.0
grow_horizontal = 2
grow_vertical = 2

[node name="resumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../quitButton")
theme_override_colors/font_hover_color = Color(0.5294118, 0.5294118, 0.5294118, 1)
theme_override_fonts/font = ExtResource("2_kukqi")
text = "RESUME"

[node name="menuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.5294118, 0.5294118, 0.5294118, 1)
theme_override_fonts/font = ExtResource("2_kukqi")
text = "MAIN MENU"

[node name="restartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_kukqi")
text = "RESTART"

[node name="quitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../resumeButton")
theme_override_colors/font_hover_color = Color(0.5294118, 0.5294118, 0.5294118, 1)
theme_override_fonts/font = ExtResource("2_kukqi")
text = "QUIT"

[node name="pbButton" type="Button" parent="."]
layout_mode = 0
offset_left = -84.0
offset_top = 188.0
offset_right = 28.0
offset_bottom = 212.0
theme_override_fonts/font = ExtResource("2_kukqi")
text = "00:00:00"

[connection signal="pressed" from="VBoxContainer/resumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/menuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/restartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/quitButton" to="." method="_on_quit_button_pressed"]
